fix/ style general layout issues

--- a/src/blocks/app/app.css
+++ b/src/blocks/app/app.css
@@ -1,5 +1,5 @@
 .main {
     display: flex;
-    margin: 28px 40px 0;
+    max-width: 1360px;
 }
 
