--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,7 +3,7 @@
     background-color: #fff;
     display: flex;
     justify-content: space-between;
-    width: 1360px;
+    max-width: 1360px;
     height: 40px;
     margin: 32px 40px 0;
     }
@@ -22,7 +22,7 @@
     .header__date {
         display: flex;
         align-items: center;
-        width: 116px;
+        max-width: 116px;
     height: 24px;
         font-family: Cabinet Grotesk;
     font-size: 20px;
@@ -34,7 +34,7 @@
     .header__add-button {
         display: flex;
     align-items: center;
-        width: 116px;
+       max-width: 116px;
     height: 24px;
       font-family: Cabinet Grotesk;
     font-size: 20px;
